test/spec_vectors/local_get/fail/module_16.wat
(module (func $large-mixed (param i64) (local i32 i64) (local.get 214324343) drop))